--- a/Bachelor/app/views/posts/index.html.erb
+++ b/Bachelor/app/views/posts/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>Listing posts</h1>
+ 
+<table>
+  <tr>
+    <th>Content</th>
+    <th>Created at</th>
+    
+  </tr>
+ 
+<% @posts.each do |post| %>
+  <tr>
+    <td><%= post.content %></td>
+    <td><%= post.created_at %></td>
+    <td><%= link_to 'Show', post %></td>
+    <td><%= link_to 'Edit', edit_post_path(post) %></td>
+    <td><%= link_to 'Destroy', post, :method => :delete ,:confirm => 'Are you sure?'
+                                     %></td>
+  </tr>
+<% end %>
+</table>
+ 
+<br />
+ 
+<%= link_to 'New post', new_post_path %>
