--- a/Bachelor/app/views/posts/new.html.erb
+++ b/Bachelor/app/views/posts/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<%= form_for(@post) do |f| %>
+      <%= f.label :content %>
+      <%= f.text_field :content %>
+
+      <%= f.submit "Post", class: "btn btn-primary" %>
+    <% end %>
