--- a/Bachelor/app/views/posts/index.html.erb
+++ b/Bachelor/app/views/posts/index.html.erb
@@ -16,6 +16,12 @@
     <td><%= link_to 'Destroy', post, :method => :delete ,:confirm => 'Are you sure?'
                                      %></td>
   </tr>
+  <tr><%post.comments.each do |comment|%>
+  <td><%=comment.content%></td>
+
+    
+  </tr>
+  <%end%>
 <% end %>
 </table>
  
