--- a/Bachelor/app/views/users/show.html.erb
+++ b/Bachelor/app/views/users/show.html.erb
@@ -18,8 +18,11 @@
 	<b>Gender: </b><%if @user.gender == 1%> female <%else%> male <%end%>
     <br>
     <br>
-	<%if current_user.avatar != nil%>
-	<%= image_tag current_user.avatar.to_s%>
+	<li>
+	<%if @user.avatar_url != nil%>
+	  <%= link_to(@user.avatar_url.to_s) do %>
+	    <%= image_tag @user.avatar_url.to_s,size:"100x100" %>
+	  <% end %>
 	<%else%>
-	<%= image_tag "user.jpg"%>
-<%end%>
+	  <%= image_tag "user.png", size: "100x100"%>
+	<%end%></li>
