--- a/Bachelor/app/views/users/timeline.html.erb
+++ b/Bachelor/app/views/users/timeline.html.erb
@@ -1,3 +1,5 @@
+
+<%if @can==1%>
 <% @post = Post.new %>
   <%= form_for @post , :url => posts_path(destid: @user.id,user_type:@user.doctor)  do |ff| %>
   <div class="field">
@@ -11,6 +13,7 @@
 
 <%end%>
 <br>
+<%end%>
 <table>
   <tr>
     <th>Content</th>
@@ -27,20 +30,20 @@
   <td><%=comment.content%></td>
   </tr>
   <%end%>
-  <% @comment = Comment.new %>
-  <%= form_for @comment , :url => comments_path(post_id: post.id)  do |f| %>
-  <div class="field">
-  <%= f.hidden_field :post_id, :value => @post.id %>
-    <%= f.label :comment %><br />
-    <%= f.text_field :content %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%if @can==1%>
+    <% @comment = Comment.new %>
+      <%= form_for @comment , :url => comments_path(post_id: post.id)  do |f| %>
+      <div class="field">
+      <%= f.hidden_field :post_id, :value => @post.id %>
+        <%= f.label :comment %><br />
+        <%= f.text_field :content %>
+      </div>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
 
+  <%end%>
 <%end%>
-
-
 <% end %>
 </table>
  
