user can post on category and on anytime line of his followee

--- a/Bachelor/app/views/categories/show.html.erb
+++ b/Bachelor/app/views/categories/show.html.erb
@@ -1,18 +1,18 @@
-
 <%if @can==1%>
-<% @post = Post.new %>
-  <%= form_for @post , :url => posts_path(destid: @user.id,desttype:0)  do |ff| %>
-  <div class="field">
-    <%= ff.label :content %><br />
-    <%= ff.text_field :content %>
-  </div>
-  <div class="actions">
-    <%= ff.submit %>
-  </div>
+  <% @post = Post.new %>
+  <%= form_for @post , :url => posts_path(destid: @category.id,desttype:1)  do |ff| %>
+	  <div class="field">
+	    <%= ff.label :content %><br />
+	    <%= ff.text_field :content %>
+	  </div>
+	  <div class="actions">
+	    <%= ff.submit %>
+	  </div>
 
 <%end%>
 <br>
 <%end%>
+
 <table>
   <tr>
     <th>Content</th>
@@ -47,6 +47,3 @@
 </table>
  
 <br />
-
- 
-<%= link_to 'New post', new_post_path %>
