finished edit profile and added facebook share button

--- a/Bachelor/app/views/users/edit.html.erb
+++ b/Bachelor/app/views/users/edit.html.erb
@@ -38,7 +38,13 @@
      <p>
 		<%= f.label :gender%>
 		<br>
-		<%= f.text_field :gender, :value => self.current_user.gender%>
+		<% if self.current_user.gender == true 
+                 @gender = "Female"
+              else 
+                  @gender = "Male" 
+             end          
+			%>
+		<%= f.text_field :gender, :value => @gender%>
 	</p>
 
 	<p>
