--- a/Bachelor/app/views/layouts/application.html.erb
+++ b/Bachelor/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<!-- Facebook -->
+		<!--	<a href="http://www.facebook.com/sharer.php?u=<URL>" target="_blank"><img src="http://www.simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" class="share-buttons"/></a> -->
 <%= yield %>
 
 </body>
