added rabl to gem file and its config file in initializers

--- a/Bachelor/app/views/layouts/application.html.erb
+++ b/Bachelor/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
    
   
   <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in",:style=> "margin-top: 50px;" %>
   <% end %>
 
 
