--- a/Bachelor/app/views/posts/show.html.erb
+++ b/Bachelor/app/views/posts/show.html.erb
@@ -1,3 +1,12 @@
+
+	<div>
+	<!-- Facebook -->
+	<a href="http://www.facebook.com/sharer.php?u=<URL>" target="_blank"><img src="http://www.simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" class="share-buttons"/></a>
+	</div>
+<h2>
+<%= @post.title%>
+</h2>
+<br/>
 <h3>
 <%=@post.content %>
 </h3>
